# bougie

./: .dockerignore  .gitattributes  .gitignore  AUTOLOADER_PLAN.md  CHANGELOG.md  CLAUDE.md  CLI_REORG_PLAN.md  COMPOSER_PARITY.md  Cargo.toml  DIAGNOSE_PLAN.md  ERROR_VISIBILITY_PLAN.md  HEALTH_CHECK_PLAN.md  INCREMENTAL_AUTOLOADER_PLAN.md  INSTANCES_PLAN.md  NODE_PLAN.md  PHASE_D_PLAN.md  README.md  RELEASE.md  RESOLVER_PERF_PLAN.md  RESOLVER_PLAN.md  RESOLVER_TEST_PLAN.md  SCRIPTS_PLAN.md  SERVER_CLI_PLAN.md  SERVER_PLAN.md  SUPERVISION_PLAN.md  SYSTEM_PHP_PLAN.md  TELEMETRY.md  TELEMETRY_PLAN.md  TOOL_PLAN.md  UNBUNDLE_PLAN.md  WINDOWS_PLAN.md  dist-workspace.toml  flake.nix  release-please-config.json  release-plz.toml
crates/bougie-autoloader/: CHANGELOG.md  Cargo.toml
crates/bougie-autoloader/benches/: scan.rs
crates/bougie-autoloader/examples/: dump_bench.rs
crates/bougie-autoloader/src/: autoloader.rs  collect.rs  emit.rs  installed.rs  lib.rs  lock.rs  vendored.rs  version.rs
crates/bougie-autoloader/src/emit/: platform_check.rs  real.rs  static_loader.rs
crates/bougie-autoloader/src/scan/: cleaner.rs  exclude.rs  filter.rs  finder.rs  mod.rs
crates/bougie-autoloader/tests/: byte_equivalence.rs  live_autoloader.rs  version_normalize.rs
crates/bougie-autoloader/tests/data/: version_normalize.tsv  version_normalize_inputs.txt
crates/bougie-babysit/: CHANGELOG.md  Cargo.toml
crates/bougie-babysit/src/: lib.rs
crates/bougie-backend/: Cargo.toml
crates/bougie-backend/src/: bougie_index_backend.rs  lib.rs  nodejs_org.rs  windows_php_net.rs
crates/bougie-cli/: Cargo.toml  build.rs
crates/bougie-cli/src/: lib.rs
crates/bougie-composer/: Cargo.toml
crates/bougie-composer-resolver/: CHANGELOG.md  Cargo.toml
crates/bougie-composer-resolver/benches/: resolve.rs
crates/bougie-composer-resolver/src/: audit.rs  hash.rs  lib.rs  metadata.rs  package_name.rs  platform.rs  query.rs  update.rs  vcs.rs  verify.rs
crates/bougie-composer-resolver/src/install/: bin_proxy.rs  downloader.rs  mod.rs  orchestrate.rs  path_link.rs  source.rs
crates/bougie-composer-resolver/src/install/bin_proxy/: tests.rs
crates/bougie-composer-resolver/src/install/downloader/: tests.rs
crates/bougie-composer-resolver/src/install/orchestrate/: tests.rs
crates/bougie-composer-resolver/src/metadata/: tests.rs
crates/bougie-composer-resolver/src/update/: path_repo.rs  tests.rs  vcs_repo.rs
crates/bougie-composer-resolver/src/update/vcs_repo/: tests.rs
crates/bougie-composer-resolver/src/vcs/: tests.rs
crates/bougie-composer-resolver/src/verify/: provider.rs  range.rs  tests.rs
crates/bougie-composer-resolver/src/verify/range/: tests.rs
crates/bougie-composer-resolver/tests/: patch_reapply.rs
crates/bougie-composer/src/: fetch.rs  inline.rs  lib.rs  lockfile.rs  metadata.rs  request.rs  resolve.rs
crates/bougie-composer/src/metadata/: tests.rs
crates/bougie-config/: Cargo.toml
crates/bougie-config/src/: composer.rs  lib.rs  merge.rs  toml.rs
crates/bougie-daemon/: Cargo.toml
crates/bougie-daemon/src/: babysit.rs  daemon.rs  lib.rs
crates/bougie-daemon/src/daemon/: catalog.rs  cgroup.rs  credentials.rs  endpoint.rs  health.rs  instance.rs  ipc.rs  logs.rs  ports.rs  sandbox.rs  state.rs  store_fetch.rs  store_layout.rs  supervisor.rs  tenant_env.rs  tenants.rs
crates/bougie-errors/: Cargo.toml
crates/bougie-errors/src/: lib.rs
crates/bougie-fetch/: Cargo.toml
crates/bougie-fetch/src/: lib.rs
crates/bougie-fs/: Cargo.toml
crates/bougie-fs/src/: lib.rs  lock.rs  state.rs  store.rs
crates/bougie-index/: Cargo.toml
crates/bougie-index/src/: fetch.rs  lib.rs  verify.rs  wire.rs
crates/bougie-installer/: Cargo.toml
crates/bougie-installer/src/: baseline.rs  conf_d.rs  install.rs  lib.rs
crates/bougie-installers/: Cargo.toml
crates/bougie-installers/src/: deploy.rs  laravel.rs  lib.rs  paths.rs
crates/bougie-output/: Cargo.toml
crates/bougie-output/src/: lib.rs  list_format.rs  output.rs
crates/bougie-patches/: Cargo.toml
crates/bougie-patches/src/: apply.rs  diff.rs  lib.rs  lock.rs  make.rs  model.rs  pass.rs  plan.rs  resolve.rs  target.rs
crates/bougie-patches/tests/: apply_fixtures.rs
crates/bougie-paths/: Cargo.toml
crates/bougie-paths/src/: lib.rs
crates/bougie-php-discovery/: Cargo.toml
crates/bougie-php-discovery/src/: lib.rs  select.rs
crates/bougie-php-json/: CHANGELOG.md  Cargo.toml
crates/bougie-platform/: Cargo.toml
crates/bougie-platform/src/: binfmt.rs  elf.rs  lib.rs  macho.rs  target.rs
crates/bougie-recipe/: Cargo.toml
crates/bougie-recipe/recipes/: generic.toml  laravel.toml  magento.toml
crates/bougie-recipe/src/: builtin.rs  dag.rs  freshness.rs  lib.rs  parser.rs  run.rs
crates/bougie-resolver/: Cargo.toml
crates/bougie-resolver/src/: lib.rs
crates/bougie-scripts/: Cargo.toml
crates/bougie-scripts/src/: context.rs  dispatch.rs  lib.rs
crates/bougie-semver/: CHANGELOG.md  Cargo.toml
crates/bougie-semver/src/: bound.rs  constraint.rs  lib.rs  version.rs
crates/bougie-semver/tests/: conformance.rs
crates/bougie-server/: Cargo.toml
crates/bougie-server/src/: server.rs
crates/bougie-server/src/server/: autoloader_manager.rs  conf_d.rs  config.rs  control.rs  fastcgi.rs  helpers.rs  hosts.rs  log.rs  paths.rs  pool.rs  router.rs  run.rs  static_files.rs  tls.rs  watch_registry.rs  watcher.rs
crates/bougie-telemetry/: Cargo.toml
crates/bougie-telemetry/src/: clock.rs  crash.rs  event.rs  flush.rs  ids.rs  lib.rs  mode.rs  probe.rs  prompt.rs  recorder.rs  scrub.rs  spawn.rs  spool.rs  update.rs
crates/bougie-tool/: Cargo.toml
crates/bougie-tool/src/: classify.rs  exec.rs  inject.rs  install.rs  lib.rs  list.rs  prefetch.rs  receipt.rs  request.rs  resolve.rs  run.rs  uninstall.rs  upgrade.rs  wrapper.rs
crates/bougie-tunnel/: Cargo.toml
crates/bougie-tunnel-protocol/: Cargo.toml
crates/bougie-tunnel-protocol/src/: lib.rs
crates/bougie-tunnel/examples/: dev-share.rs
crates/bougie-tunnel/src/: connect.rs  lib.rs  protocol.rs  proxy.rs  supervise.rs
(+518 files in other folders)
