[workspace]
# `crates/sandbox-run` and its sibling `macos-sandbox-sys` are vendored
# (rather than path-deped from a sibling repo) so that the bougie repo
# is self-contained for build and audit. Both crates are EUPL-1.2,
# matching bougie's license.
resolver = "3"
members = [
    "crates/bougie",
    "crates/bougie-autoloader",
    "crates/bougie-babysit",
    "crates/bougie-cli",
    "crates/bougie-backend",
    "crates/bougie-composer",
    "crates/bougie-composer-resolver",
    "crates/bougie-config",
    "crates/bougie-daemon",
    "crates/bougie-errors",
    "crates/bougie-fetch",
    "crates/bougie-fs",
    "crates/bougie-index",
    "crates/bougie-installer",
    "crates/bougie-installers",
    "crates/bougie-output",
    "crates/bougie-paths",
    "crates/bougie-php-json",
    "crates/bougie-platform",
    "crates/bougie-recipe",
    "crates/bougie-resolver",
    "crates/bougie-semver",
    "crates/bougie-server",
    "crates/bougie-tool",
    "crates/bougie-version",
    "crates/macos-sandbox-sys",
    "crates/sandbox-run",
]

[workspace.package]
version = "0.9.0" # x-release-please-version
edition = "2024"
license = "EUPL-1.2"
authors = ["Jelle Besseling <jelle@pingiun.com>"]

# Intra-workspace deps centralized so consumers reference them with
# `{ workspace = true }` and layer `features = [...]` on top as needed.
# No `version = "..."` pins: bougie isn't published to crates.io
# (`publish = false` workspace-wide), so cargo doesn't require one on
# path deps. The only version literal in the workspace lives in
# `[workspace.package].version` above; release-please rewrites that
# single line on every release and `version.workspace = true` in each
# crate propagates it.
[workspace.dependencies]
bougie-autoloader = { path = "crates/bougie-autoloader" }
bougie-babysit = { path = "crates/bougie-babysit" }
bougie-backend = { path = "crates/bougie-backend" }
bougie-cli = { path = "crates/bougie-cli" }
bougie-composer = { path = "crates/bougie-composer" }
bougie-composer-resolver = { path = "crates/bougie-composer-resolver" }
bougie-config = { path = "crates/bougie-config" }
bougie-daemon = { path = "crates/bougie-daemon" }
bougie-errors = { path = "crates/bougie-errors" }
bougie-fetch = { path = "crates/bougie-fetch" }
bougie-fs = { path = "crates/bougie-fs" }
# The `bougie` bin needs `default-features = false` on bougie-index
# (gates `dev-trust-root` behind its own feature flag), and cargo's
# workspace inheritance rejects member-level `default-features`
# overrides when the workspace dep has defaults on. The bin keeps its
# own inline [dependencies.bougie-index] block (no version literal
# needed since we don't publish); every other consumer inherits this
# workspace entry with defaults on.
bougie-index = { path = "crates/bougie-index" }
bougie-installer = { path = "crates/bougie-installer" }
bougie-installers = { path = "crates/bougie-installers" }
bougie-output = { path = "crates/bougie-output" }
bougie-paths = { path = "crates/bougie-paths" }
bougie-php-json = { path = "crates/bougie-php-json" }
bougie-platform = { path = "crates/bougie-platform" }
bougie-recipe = { path = "crates/bougie-recipe" }
bougie-resolver = { path = "crates/bougie-resolver" }
bougie-semver = { path = "crates/bougie-semver" }
bougie-server = { path = "crates/bougie-server" }
bougie-tool = { path = "crates/bougie-tool" }
bougie-version = { path = "crates/bougie-version" }
sandbox-run = { path = "crates/sandbox-run" }
macos-sandbox-sys = { path = "crates/macos-sandbox-sys" }

[workspace.lints.rust]
# `deny` rather than `forbid` so the daemon's process-supervisor can
# allow a single, well-justified unsafe block: applying a sandbox
# policy via `std::os::unix::process::CommandExt::pre_exec` (see
# `bougie-daemon/src/supervisor.rs`). Every other site stays safe by
# default; adding a new `#[allow(unsafe_code)]` should require
# explicit review.
unsafe_code = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Specific opt-outs from pedantic that aren't worth the churn:
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"

[profile.release]
# Smaller, faster, no panic-unwinder.
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = "line-tables-only"
strip = "none"

# dist invokes `cargo build --profile dist`. Inheriting `release` gives
# us the same lto = "fat" / codegen-units = 1 / strip = "symbols"
# settings the regular release binary uses — what we ship from CI is
# what `cargo build --release` produces locally.
[profile.dist]
inherits = "release"

[profile.dev]
# Default; mostly here so developers don't get surprised by a tuned profile.
