[workspace]
# `crates/sandbox-run` and its sibling `macos-sandbox-sys` are vendored
# (rather than path-deped from a sibling repo) so that the bougie repo
# is self-contained for build and audit. Both crates are EUPL-1.2,
# matching bougie's license.
resolver = "3"
members = [
    "crates/bougie",
    "crates/bougie-autoloader",
    "crates/bougie-babysit",
    "crates/bougie-cli",
    "crates/bougie-backend",
    "crates/bougie-composer",
    "crates/bougie-composer-resolver",
    "crates/bougie-config",
    "crates/bougie-daemon",
    "crates/bougie-errors",
    "crates/bougie-fetch",
    "crates/bougie-fs",
    "crates/bougie-index",
    "crates/bougie-installer",
    "crates/bougie-installers",
    "crates/bougie-output",
    "crates/bougie-paths",
    "crates/bougie-php-discovery",
    "crates/bougie-php-json",
    "crates/bougie-platform",
    "crates/bougie-recipe",
    "crates/bougie-resolver",
    "crates/bougie-scripts",
    "crates/bougie-semver",
    "crates/bougie-server",
    "crates/bougie-tool",
    "crates/bougie-version",
    "crates/macos-sandbox-sys",
    "crates/sandbox-run",
]

[workspace.package]
version = "0.26.0" # x-release-please-version
edition = "2024"
license = "EUPL-1.2"
authors = ["Jelle Besseling <jelle@pingiun.com>"]

# Intra-workspace deps centralized so consumers reference them with
# `{ workspace = true }` and layer `features = [...]` on top as needed.
# Each entry carries both `path` (used for local builds) and a
# `version` requirement (used for the crates.io publish — cargo rejects
# a published crate whose normal deps lack a version). cargo offers no
# `version.workspace = true` for a dependency's version field, so the
# literal must live on each line; the trailing release-please marker
# lets the tool rewrite all of them in lockstep with
# `[workspace.package].version` above (Cargo.toml is a release-please
# `extra-file`), so they never drift.
[workspace.dependencies]
bougie-autoloader = { path = "crates/bougie-autoloader", version = "0.26.0" } # x-release-please-version
bougie-babysit = { path = "crates/bougie-babysit", version = "0.26.0" } # x-release-please-version
bougie-backend = { path = "crates/bougie-backend", version = "0.26.0" } # x-release-please-version
bougie-cli = { path = "crates/bougie-cli", version = "0.26.0" } # x-release-please-version
bougie-composer = { path = "crates/bougie-composer", version = "0.26.0" } # x-release-please-version
bougie-composer-resolver = { path = "crates/bougie-composer-resolver", version = "0.26.0" } # x-release-please-version
bougie-config = { path = "crates/bougie-config", version = "0.26.0" } # x-release-please-version
bougie-daemon = { path = "crates/bougie-daemon", version = "0.26.0" } # x-release-please-version
bougie-errors = { path = "crates/bougie-errors", version = "0.26.0" } # x-release-please-version
bougie-fetch = { path = "crates/bougie-fetch", version = "0.26.0" } # x-release-please-version
bougie-fs = { path = "crates/bougie-fs", version = "0.26.0" } # x-release-please-version
# The `bougie` bin needs `default-features = false` on bougie-index
# (gates `dev-trust-root` behind its own feature flag), and cargo's
# workspace inheritance rejects member-level `default-features`
# overrides when the workspace dep has defaults on. The bin keeps its
# own inline [dependencies.bougie-index] block (which carries its own
# annotated version literal); every other consumer inherits this
# workspace entry with defaults on.
bougie-index = { path = "crates/bougie-index", version = "0.26.0" } # x-release-please-version
bougie-installer = { path = "crates/bougie-installer", version = "0.26.0" } # x-release-please-version
bougie-installers = { path = "crates/bougie-installers", version = "0.26.0" } # x-release-please-version
bougie-output = { path = "crates/bougie-output", version = "0.26.0" } # x-release-please-version
bougie-paths = { path = "crates/bougie-paths", version = "0.26.0" } # x-release-please-version
bougie-php-discovery = { path = "crates/bougie-php-discovery", version = "0.26.0" } # x-release-please-version
bougie-php-json = { path = "crates/bougie-php-json", version = "0.26.0" } # x-release-please-version
bougie-platform = { path = "crates/bougie-platform", version = "0.26.0" } # x-release-please-version
bougie-recipe = { path = "crates/bougie-recipe", version = "0.26.0" } # x-release-please-version
bougie-resolver = { path = "crates/bougie-resolver", version = "0.26.0" } # x-release-please-version
bougie-scripts = { path = "crates/bougie-scripts", version = "0.26.0" } # x-release-please-version
bougie-semver = { path = "crates/bougie-semver", version = "0.26.0" } # x-release-please-version
bougie-server = { path = "crates/bougie-server", version = "0.26.0" } # x-release-please-version
bougie-tool = { path = "crates/bougie-tool", version = "0.26.0" } # x-release-please-version
bougie-version = { path = "crates/bougie-version", version = "0.26.0" } # x-release-please-version
sandbox-run = { path = "crates/sandbox-run", version = "0.26.0" } # x-release-please-version
macos-sandbox-sys = { path = "crates/macos-sandbox-sys", version = "0.26.0" } # x-release-please-version

[workspace.lints.rust]
# `deny` rather than `forbid` so the daemon's process-supervisor can
# allow a single, well-justified unsafe block: applying a sandbox
# policy via `std::os::unix::process::CommandExt::pre_exec` (see
# `bougie-daemon/src/supervisor.rs`). Every other site stays safe by
# default; adding a new `#[allow(unsafe_code)]` should require
# explicit review.
unsafe_code = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Specific opt-outs from pedantic that aren't worth the churn:
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"

[profile.release]
# Smaller, faster, no panic-unwinder.
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = "line-tables-only"
strip = "none"

# dist invokes `cargo build --profile dist`. Inheriting `release` gives
# us the same lto = "fat" / codegen-units = 1 / strip = "symbols"
# settings the regular release binary uses — what we ship from CI is
# what `cargo build --release` produces locally.
[profile.dist]
inherits = "release"

# Fast-iterating, optimized-ish builds. `release`'s `lto = "fat"` +
# `codegen-units = 1` re-run whole-program LTO on every edit, so a
# one-line change costs ~50s warm. This profile keeps opt-level 3 but
# drops LTO and parallelizes codegen, taking the same warm rebuild to
# under a second — for chasing release-only behavior or quick perf
# sanity checks. NOT what we ship: `release`/`dist` stay fat-LTO.
[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 16

[profile.dev]
# Default; mostly here so developers don't get surprised by a tuned profile.
