[package]
name = "bougie-autoloader"
version = "0.1.0"
edition = "2024"
description = "Generate Composer-compatible vendor/composer/autoload_*.php from a resolved dependency tree."
license = "EUPL-1.2"
repository = "https://github.com/cresset-tools/bougie"
rust-version = "1.95"
authors.workspace = true

[dependencies]
md-5 = "0.11"
memchr = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
walkdir = "2.5"

[dependencies.regex]
version = "1.11"
default-features = false
features = ["std", "perf"]

[lints]
workspace = true
