[package]
name = "bougie-autoloader"
version = "0.1.0"
edition = "2024"
description = "Generate Composer-compatible vendor/composer/autoload_*.php from a resolved dependency tree."
license = "EUPL-1.2"
repository = "https://github.com/cresset-tools/bougie"
rust-version = "1.95"
authors.workspace = true

[dependencies]
md-5 = "0.11"
memchr = "2"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
walkdir = "2.5"

[dependencies.bougie-php-json]
path = "../bougie-php-json"

[dependencies.regex]
version = "1.11"
default-features = false
# `unicode-perl` is needed for `\d` / `\s` / `\w` shorthand used in
# `src/version.rs`, and `unicode-case` for `(?i)` on the stability
# tokens. The two together are the smallest add-on the regex crate
# offers that covers what composer/semver's `normalize()` regexes
# require.
features = ["std", "perf", "unicode-perl", "unicode-case"]

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "scan"
harness = false

[lints]
workspace = true
