[package]
name = "bougie-autoloader"
version.workspace = true
edition = "2024"
description = "Generate Composer-compatible vendor/composer/autoload_*.php from a resolved dependency tree."
license = "EUPL-1.2"
repository = "https://github.com/cresset-tools/bougie"
rust-version = "1.95"
authors.workspace = true
# Keep ~3 MB of test fixtures out of the published crate; they exist
# only for this repo's CI and are useless to a registry consumer. The
# `benches/` dir stays (it's a declared [[bench]] target).
exclude = ["/tests"]

[dependencies]
bougie-installers = { workspace = true }
composer-php-json = { workspace = true }
composer-semver = { workspace = true }
md-5 = "0.11"
memchr = "2"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tracing = "0.1"
walkdir = "2.5"

[dependencies.regex]
version = "1.11"
default-features = false
# `unicode-perl` is needed for `\d` / `\s` / `\w` shorthand used in
# `src/version.rs`, and `unicode-case` for `(?i)` on the stability
# tokens. The two together are the smallest add-on the regex crate
# offers that covers what composer/semver's `normalize()` regexes
# require.
features = ["std", "perf", "unicode-perl", "unicode-case"]

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "scan"
harness = false

[lints]
workspace = true
