[package]
name = "bougie-babysit"
version.workspace = true
edition = "2024"
description = "Per-service babysitter shim spawned by bougied to own a service's process group."
license = "EUPL-1.2"
repository = "https://github.com/cresset-tools/bougie"
rust-version = "1.95"
authors.workspace = true

[dependencies.eyre]
version = "0.6"

[dependencies.rustix]
version = "1.0"
default-features = false
features = ["std", "process"]

[dependencies.tokio]
version = "1"
default-features = false
features = [
    "rt", "net", "process", "signal",
    "macros", "time", "io-util",
]

[lints]
workspace = true
