[package]
name = "bougie-backend"
version.workspace = true
edition = "2024"
description = "Pluggable PHP-distribution backends (bougie index, windows.php.net) for bougie."
license = "EUPL-1.2"
repository = "https://github.com/cresset-tools/bougie"
rust-version = "1.95"
authors.workspace = true

[dependencies.bougie-errors]
path = "../bougie-errors"

[dependencies.bougie-fetch]
path = "../bougie-fetch"

[dependencies.bougie-index]
path = "../bougie-index"

[dependencies.bougie-paths]
path = "../bougie-paths"

[dependencies.bougie-platform]
path = "../bougie-platform"

[dependencies.bougie-resolver]
path = "../bougie-resolver"

[dependencies.bougie-version]
path = "../bougie-version"

[dependencies.eyre]
version = "0.6"

[dependencies.reqwest]
version = "0.13"
default-features = false
features = ["blocking", "rustls"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]

[dependencies.tempfile]
version = "3.10"

[lints]
workspace = true
