[package]
name = "bougie-backend"
version.workspace = true
edition = "2024"
description = "Pluggable PHP-distribution backends (bougie index, windows.php.net) for bougie."
license = "EUPL-1.2"
repository = "https://github.com/cresset-tools/bougie"
rust-version = "1.95"
authors.workspace = true

[dependencies]
bougie-errors = { workspace = true }
bougie-fetch = { workspace = true }
bougie-index = { workspace = true }
bougie-paths = { workspace = true }
bougie-platform = { workspace = true }
bougie-resolver = { workspace = true }
bougie-version = { workspace = true }
bougie-semver = { workspace = true }

[dependencies.eyre]
version = "0.6"

[dependencies.reqwest]
version = "0.13"
default-features = false
features = ["blocking", "rustls"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]

[dependencies.tempfile]
version = "3.10"

[lints]
workspace = true
