[package]
name = "bougie-cli"
version = "0.4.0"
edition = "2024"
description = "Clap argument-parsing types for bougie."
license = "EUPL-1.2"
repository = "https://github.com/cresset-tools/bougie"
rust-version = "1.95"
authors.workspace = true

[dependencies.clap]
version = "4.5"
default-features = false
features = ["std", "derive", "help", "usage", "error-context", "suggestions", "wrap_help", "color"]

[lints]
workspace = true
