[package]
name = "bougie-composer-resolver"
version = "0.1.0"
edition = "2024"
description = "Native Composer dependency resolver + installer for bougie. Reads composer.lock, downloads dists in parallel, extracts to vendor/."
license = "EUPL-1.2"
repository = "https://github.com/cresset-tools/bougie"
rust-version = "1.95"
authors.workspace = true

[dependencies]
eyre = "0.6"
pubgrub = "0.4"
rayon = "1.10"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.bougie-autoloader]
path = "../bougie-autoloader"
version = "0.1.0"

[dependencies.bougie-composer]
path = "../bougie-composer"
version = "0.4.0"

[dependencies.bougie-errors]
path = "../bougie-errors"
version = "0.4.0"

[dependencies.bougie-fetch]
path = "../bougie-fetch"
version = "0.4.0"

[dependencies.bougie-output]
path = "../bougie-output"
version = "0.4.0"

[dependencies.bougie-paths]
path = "../bougie-paths"
version = "0.4.0"

[dependencies.indicatif]
version = "0.18"

[dependencies.bougie-semver]
path = "../bougie-semver"
version = "0.1.0"

[dependencies.reqwest]
version = "0.13"
default-features = false
features = ["blocking", "rustls", "gzip"]

# Binary sidecar cache for parsed Packagist metadata. On a 304
# conditional GET we read the MessagePack sidecar instead of
# re-parsing the JSON body. `LockPackage` already derives
# `serde::{Serialize, Deserialize}` so rmp-serde reuses those impls
# with no type surgery — *self-describing* matters here because
# `LockPackage.{autoload_dev, extra}` are `serde_json::Value`, whose
# `Deserialize` needs `deserialize_any`. Postcard / bincode are
# schema-less and won't round-trip Value; MessagePack and CBOR will.
# rmp-serde is meaningfully faster than ciborium on this shape.
[dependencies.rmp-serde]
version = "1"

[dev-dependencies]
tempfile = "3.10"
sha1 = "0.10"
zip = { version = "8.0", default-features = false, features = ["deflate"] }
wiremock = "0.6"
tokio = { version = "1", features = ["rt", "macros"] }

[lints]
workspace = true
