[package]
name = "bougie-composer-resolver"
version.workspace = true
edition = "2024"
description = "Native Composer dependency resolver + installer for bougie. Reads composer.lock, downloads dists in parallel, extracts to vendor/."
license = "EUPL-1.2"
repository = "https://github.com/cresset-tools/bougie"
rust-version = "1.95"
authors.workspace = true
# Test fixtures are CI-only; exclude from the published crate. The
# `benches/` dir stays (declared [[bench]] target).
exclude = ["/tests"]

[dependencies]
bougie-autoloader = { workspace = true }
bougie-composer = { workspace = true }
bougie-errors = { workspace = true }
bougie-fetch = { workspace = true }
bougie-installers = { workspace = true }
bougie-output = { workspace = true }
bougie-patches = { workspace = true }
bougie-paths = { workspace = true }
bougie-semver = { workspace = true }
eyre = "0.6"
pubgrub = "0.4"
rayon = "1.10"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `FxHasher` for the resolver's hot string-keyed maps. Comes in
# transitively via pubgrub already; pinning explicitly so the
# `FxHashMap` alias in `hash.rs` has a stable home. uv standardizes
# on this for every map its solver hammers — same shape applies
# here.
rustc-hash = "2"
# Niche-optimized `Arc<str>` for `PackageName` interning. uv uses
# this for the same purpose (`uv-normalize::PackageName` wraps
# `arcstr::ArcStr`) — cheap clone, hash-friendly, no allocator churn
# once interned. One `vendor/name` string lives across every cache
# key and every `PubGrubPackage::Package` value pubgrub clones during
# conflict analysis; interning collapses those clones to refcount
# bumps.
arcstr = "1"
# Local-artifact dist verification: hash the on-disk zip against the
# shasum the lockfile carries. Already used by `bougie-fetch` for HTTP
# dists; we hash the local copy here for symmetry.
sha1 = "0.10"
# `type: path` repository globbing. Composer expands a path repo's
# `url` with PHP's `glob()` (`*`/`?` wildcards over a directory tree);
# this is the Rust equivalent. Small, rust-lang-maintained.
glob = "0.3"

[dependencies.indicatif]
version = "0.18"

[dependencies.tracing]
version = "0.1"

[dependencies.reqwest]
version = "0.13"
default-features = false
features = ["blocking", "rustls", "gzip"]

# Parallel metadata pre-fetch (`update::pre_fetch_closure_inner`) runs
# a Semaphore-bounded fan-out on a small current-thread tokio runtime.
# `rt` is the executor itself, `sync` is for `tokio::sync::Semaphore`,
# `net` + `time` let the runtime drive `reqwest::Client`'s async HTTP
# I/O (otherwise the futures park forever). `macros` is dev-only.
[dependencies.tokio]
version = "1"
features = ["rt", "sync", "net", "time"]

# Windows path-repository materialization. Composer installs path
# packages as NTFS junctions (not symlinks) because junctions need no
# elevated privilege; `junction` wraps the reparse-point `DeviceIoControl`
# FFI so this crate can stay `unsafe_code = "deny"`.
[target.'cfg(windows)'.dependencies]
junction = "1"

[dev-dependencies]
tempfile = "3.10"
sha1 = "0.10"
zip = { version = "8.0", default-features = false, features = ["deflate"] }
wiremock = "0.6"
tokio = { version = "1", features = ["rt", "macros"] }
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
zstd = { version = "0.13", default-features = false }

[features]
# Enables the criterion bench `resolve` to load the captured magento2
# closure from `tests/fixtures/magento2/packagist-index.json.zst`.
# Off by default so the fixture bytes don't ship with `cargo install`
# / `cargo build`. Mirrors the `test-fixtures` pattern in the `bougie`
# crate.
bench-fixtures = []

[[bench]]
name = "resolve"
harness = false
required-features = ["bench-fixtures"]

[lints]
workspace = true
