[package]
name = "bougie-composer"
version.workspace = true
edition = "2024"
description = "composer.json / composer.lock model + PHP channel fetch for bougie."
license = "EUPL-1.2"
repository = "https://github.com/cresset-tools/bougie"
rust-version = "1.95"
authors.workspace = true

[dependencies]
bougie-errors = { workspace = true }
bougie-fetch = { workspace = true }
bougie-fs = { workspace = true }
bougie-paths = { workspace = true }
bougie-php-json = { workspace = true }

[dependencies.eyre]
version = "0.6"

[dependencies.md-5]
version = "0.11"

[dependencies.reqwest]
version = "0.13"
default-features = false
features = ["blocking", "rustls"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]

[dependencies.tempfile]
version = "3.10"

[lints]
workspace = true
