[package]
name = "bougie-config"
version.workspace = true
edition = "2024"
description = "bougie.toml / composer.json config model and merge for bougie."
license = "EUPL-1.2"
repository = "https://github.com/cresset-tools/bougie"
rust-version = "1.95"
authors.workspace = true

[dependencies.eyre]
version = "0.6"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]

[dependencies.toml_edit]
version = "0.25"
features = ["serde"]

[lints]
workspace = true
