[package]
name = "bougie-daemon"
version.workspace = true
edition = "2024"
description = "bougied process supervisor for bougie."
license = "EUPL-1.2"
repository = "https://github.com/cresset-tools/bougie"
rust-version = "1.95"
authors.workspace = true

[dependencies.bougie-config]
path = "../bougie-config"

[dependencies.bougie-errors]
path = "../bougie-errors"

[dependencies.bougie-fetch]
path = "../bougie-fetch"

[dependencies.bougie-fs]
path = "../bougie-fs"

[dependencies.bougie-index]
path = "../bougie-index"

[dependencies.bougie-backend]
path = "../bougie-backend"

[dependencies.bougie-installer]
path = "../bougie-installer"

[dependencies.bougie-output]
path = "../bougie-output"

[dependencies.bougie-paths]
path = "../bougie-paths"

[dependencies.bougie-platform]
path = "../bougie-platform"

[dependencies.bougie-server]
path = "../bougie-server"

[dependencies.eyre]
version = "0.6"

[dependencies.reqwest]
version = "0.13"
default-features = false
features = ["blocking", "rustls"]

[dependencies.rustix]
version = "1.0"
default-features = false
features = ["std", "fs", "process"]

[dependencies.sandbox-run]
path = "../sandbox-run"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]

[dependencies.sha2]
version = "0.11"

[dependencies.tempfile]
version = "3.10"

[dependencies.tokio]
version = "1"
default-features = false
features = [
    "rt-multi-thread", "net", "process", "signal", "fs",
    "macros", "time", "sync", "io-util",
]

[dependencies.toml_edit]
version = "0.25"
features = ["serde"]

[dependencies.tracing]
version = "0.1"

[lints]
workspace = true
