[package]
name = "bougie-fetch"
version = "0.4.0"
edition = "2024"
description = "HTTP blob downloader with SHA-256 verification + tar.zst / zip extraction for bougie."
license = "EUPL-1.2"
repository = "https://github.com/cresset-tools/bougie"
rust-version = "1.95"
authors.workspace = true

[dependencies.bougie-errors]
path = "../bougie-errors"
version = "0.4.0"

[dependencies.bougie-output]
path = "../bougie-output"
version = "0.4.0"

[dependencies.eyre]
version = "0.6"

[dependencies.indicatif]
version = "0.18"

[dependencies.reqwest]
version = "0.13"
default-features = false
features = ["blocking", "rustls", "stream"]

[dependencies.sha2]
version = "0.11"

[dependencies.tar]
version = "0.4"

[dependencies.tracing]
version = "0.1"

[dependencies.zip]
version = "8.0"
default-features = false
features = ["deflate"]

[dependencies.zstd]
version = "0.13"
default-features = false

[dev-dependencies.tempfile]
version = "3.10"

[lints]
workspace = true
